# textstat-py

./: README.md  pyproject.toml  textstat.py
.github/workflows/: ci.yml  publish.yml
tests/: test_textstat.py
