[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textstat-py"
version = "0.1.0"
description = "Pure-Python text analysis: readability, vocabulary richness, sentiment, n-grams"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
    "text", "nlp", "readability", "flesch", "gunning-fog",
    "sentiment", "vocabulary", "text-analysis", "linguistics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.scripts]
textstat = "textstat:main"

[project.urls]
Homepage = "https://github.com/Gnomecromancer/textstat-py"
Repository = "https://github.com/Gnomecromancer/textstat-py"
Issues = "https://github.com/Gnomecromancer/textstat-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["textstat*"]
